Add endpoint for ReadArr, CreateArr, UpdateArr, DeleteArr
